--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "db:migrate": "npx sequelize-cli db:migrate",
+		"db:undo-migrate": "npx sequelize-cli db:migrate:undo",
+		"db:seed": "npx sequelize-cli db:seed:all"
   },
   "author": "",
   "license": "ISC",
